--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
+<head>
+  <meta charset="utf-8">
+  <title>Console Games Inventory</title>
+  <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
+  <script src="js/app.js"></script>
+</head>
 </html>
