--- a/index.html
+++ b/index.html
@@ -5,5 +5,12 @@
   <title>Console Games Inventory</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <script src="js/app.js"></script>
+  <body>
+    <form id="new-game-form">
+      <div id="form-wrapper">
+        
+      </div>
+    </form>
+  </body>
 </head>
 </html>
