added text input to form

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <body>
     <form id="new-game-form">
       <div id="form-wrapper">
-        
+        <div class="form-item">
+          <label for="title" class="primary">Title</label>
+          <input type="text" id="title" required/>
+        </div>
       </div>
     </form>
   </body>
