added select to html file tested as working in browser

--- a/index.html
+++ b/index.html
@@ -12,6 +12,19 @@
           <label for="title" class="primary">Title</label>
           <input type="text" id="title" required/>
         </div>
+        <div id="form-wrapper">
+          <div class="form-item">
+            <label for="category" class="primary">Category</label>
+            <select id="category">
+              <option value="" disabled selected></option>
+              <option value="RPG">RPG</option>
+              <option value="FPS">FPS</option>
+              <option value="MMO">MMO</option>
+              <option value="Adventure">Adventure</option>
+              <option value="Action">Action</option>
+              <option value="Simulation">Simulation</option>
+            </select>
+          </div>
       </div>
     </form>
   </body>
