added select for PEGI rating and working in browser

--- a/index.html
+++ b/index.html
@@ -12,19 +12,29 @@
           <label for="title" class="primary">Title</label>
           <input type="text" id="title" required/>
         </div>
-        <div id="form-wrapper">
-          <div class="form-item">
-            <label for="category" class="primary">Category</label>
-            <select id="category">
-              <option value="" disabled selected></option>
-              <option value="RPG">RPG</option>
-              <option value="FPS">FPS</option>
-              <option value="MMO">MMO</option>
-              <option value="Adventure">Adventure</option>
-              <option value="Action">Action</option>
-              <option value="Simulation">Simulation</option>
-            </select>
-          </div>
+        <div class="form-item">
+          <label for="category" class="primary">Category</label>
+          <select id="category">
+            <option value="" disabled selected></option>
+            <option value="RPG">RPG</option>
+            <option value="FPS">FPS</option>
+            <option value="MMO">MMO</option>
+            <option value="Adventure">Adventure</option>
+            <option value="Action">Action</option>
+            <option value="Simulation">Simulation</option>
+          </select>
+        </div>
+        <div class="form-item">
+          <label for="pegi" class="primary">PEGI rating</label>
+          <select id="pegi">
+            <option value="" disabled selected></option>
+            <option value="PEGI-3">PEGI 3</option>
+            <option value="PEGI-7">PEGI 7</option>
+            <option value="PEGI-12">PEGI 12</option>
+            <option value="PEGI-16">PEGI 16</option>
+            <option value="PEGI-18">PEGI 18</option>
+          </select>
+        </div>
       </div>
     </form>
   </body>
