added submit and delete all buttons to html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           </select>
         </div>
       </div>
+      <input type="submit" value="Update inventory"/>
     </form>
+    <button id="delete-all">Delete All</button>
   </body>
 </head>
 </html>
