--- a/index.html
+++ b/index.html
@@ -5,40 +5,42 @@
   <title>Console Games Inventory</title>
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <script src="js/app.js"></script>
-  <body>
-    <form id="new-game-form">
-      <div id="form-wrapper">
-        <div class="form-item">
-          <label for="title" class="primary">Title</label>
-          <input type="text" id="title" required/>
-        </div>
-        <div class="form-item">
-          <label for="category" class="primary">Category</label>
-          <select id="category">
-            <option value="" disabled selected></option>
-            <option value="RPG">RPG</option>
-            <option value="FPS">FPS</option>
-            <option value="MMO">MMO</option>
-            <option value="Adventure">Adventure</option>
-            <option value="Action">Action</option>
-            <option value="Simulation">Simulation</option>
-          </select>
-        </div>
-        <div class="form-item">
-          <label for="pegi" class="primary">PEGI rating</label>
-          <select id="pegi">
-            <option value="" disabled selected></option>
-            <option value="PEGI-3">PEGI 3</option>
-            <option value="PEGI-7">PEGI 7</option>
-            <option value="PEGI-12">PEGI 12</option>
-            <option value="PEGI-16">PEGI 16</option>
-            <option value="PEGI-18">PEGI 18</option>
-          </select>
-        </div>
-      </div>
-      <input type="submit" value="Update inventory"/>
-    </form>
-    <button id="delete-all">Delete All</button>
-  </body>
 </head>
+<body>
+  <form id="new-game-form">
+    <div id="form-wrapper">
+      <div class="form-item">
+        <label for="title" class="primary">Title</label>
+        <input type="text" id="title" required/>
+      </div>
+      <div class="form-item">
+        <label for="category" class="primary">Category</label>
+        <select id="category">
+          <option value="" disabled selected></option>
+          <option value="RPG">RPG</option>
+          <option value="FPS">FPS</option>
+          <option value="MMO">MMO</option>
+          <option value="Adventure">Adventure</option>
+          <option value="Action">Action</option>
+          <option value="Simulation">Simulation</option>
+        </select>
+      </div>
+      <div class="form-item">
+        <label for="pegi" class="primary">PEGI rating</label>
+        <select id="pegi">
+          <option value="" disabled selected></option>
+          <option value="PEGI-3">PEGI 3</option>
+          <option value="PEGI-7">PEGI 7</option>
+          <option value="PEGI-12">PEGI 12</option>
+          <option value="PEGI-16">PEGI 16</option>
+          <option value="PEGI-18">PEGI 18</option>
+        </select>
+      </div>
+    </div>
+    <input type="submit" value="Update inventory"/>
+  </form>
+  <button id="delete-all">Delete All</button>
+  <h1>Game Inventory</h1>
+  <div id="game-inventory"></div>
+</body>
 </html>
