added console radial button to html, working in browser

--- a/index.html
+++ b/index.html
@@ -36,6 +36,14 @@
           <option value="PEGI-18">PEGI 18</option>
         </select>
       </div>
+      <div class="form-item">
+        <input type="radio" id="consoleChoice1"
+        name="console" value="PS4">
+        <label for="consoleChoice1">PS4</label>
+        <input type="radio" id="consoleChoice2"
+        name="console" value="Xbox One">
+        <label for="consoleChoice2">Xbox One</label>
+      </div>
     </div>
     <input type="submit" value="Update inventory"/>
   </form>
