added css to background colour of html element, also added game inventory css styling, working in browser

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>Console Games Inventory</title>
+  <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400,300italic' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
   <script src="js/app.js"></script>
 </head>
@@ -20,7 +21,7 @@
           <option value="RPG">RPG</option>
           <option value="FPS">FPS</option>
           <option value="MMO">MMO</option>
-          <option value="Adventure">Adventure</option>
+          <option value="Sports">Sports</option>
           <option value="Action">Action</option>
           <option value="Simulation">Simulation</option>
         </select>
